--- a/themes/ink/layouts/screens/page3.html
+++ b/themes/ink/layouts/screens/page3.html
@@ -4,7 +4,7 @@
     <tr>
         <td>
             {{ partial "table-title" (dict "tableTitle" "CREDIT HEALTH INSIGHTS (MFI)") }}
-            {{ partial "ccir/alerts-table" (dict "alertsData" ".Site.Data.ccir.borrower_summary" "footNote" true) }}
+            {{ partial "ccir/alerts-table" (dict "alertsData" .Site.Data.ccir.alerts_health_insights "footNote" true) }}
             {{ partial "ccir/foot-note" (dict "note" "Place for footnote for above section") }}
             {{ partial "spacer" (dict "space" "60") }}
         </td>
@@ -16,7 +16,7 @@
         <td>
             {{ partial "table-title" (dict "tableTitle" "PRODUCT SUMMARY") }}
             {{ partial "ccir/product-summary-table" (dict "footNote" true) }}
-            {{ partial "ccir/foot-note" (dict "note" "Dispute reported in one or two tradelines" "notations" .Site.Data.ccir.notations_ps) }}
+            {{ partial "ccir/foot-note" (dict "note" "Dispute reported in one or two tradelines" "notations" .Site.Data.ccir.notations_ps "spacing" "20px") }}
         </td>
     </tr>
 </table>
