--- a/themes/ink/layouts/partials/ccir/report-base-table.html
+++ b/themes/ink/layouts/partials/ccir/report-base-table.html
@@ -1,12 +1,20 @@
 {{$footerTableColspan := .footerTableColspan}}
+{{$footNote:= .footNote}}
 {{if .tableData}}
     {{range .tableData}}
-        <table class="report-table bordered-table report-base-table padding-0 {{if eq .footNote true}}mb-15{{end}} {{if .mainTableClasses}}{{.mainTableClasses}}{{end}}">
+        <table class="report-table bordered-table report-base-table padding-0 {{if eq $footNote true}}mb-15{{end}} {{if .mainTableClasses}}{{.mainTableClasses}}{{end}} {{if eq .footNote true}}mb-15{{end}}">
             {{$mainTableClasses := .mainTableClasses}}
-            {{if .mainTableHead}}
+                {{if .colgroups}}
+                    <colgroup>
+                        {{range .colgroups}}
+                            <col style="width: {{.}};">
+                        {{end}}
+                    </colgroup>
+                {{end}}
+                {{if .mainTableHead}}
                 <thead>
                     {{range .mainTableHead}}
-                        <th {{if .width}}width="{{.width}}"{{end}} class="{{if .classes}}{{.classes}}{{end}}">{{.heading}}</th>
+                        <th {{if .colspan}}colspan="{{.colspan}}"{{end}} {{if .width}}width="{{.width}}"{{end}} class="{{if .classes}}{{.classes}}{{end}}">{{.heading}}</th>
                     {{end}}
                 </thead>
             {{end}}
