--- a/themes/ink/layouts/screens/page4.html
+++ b/themes/ink/layouts/screens/page4.html
@@ -5,7 +5,7 @@
         <td>
             {{ partial "table-title" (dict "tableTitle" "TRADELINE SUMMARY") }}
             {{ partial "ccir/tradeline-summary-table" (dict "footNote" true) }}
-            {{ partial "ccir/foot-note" (dict "note" "Dispute reported in one or two tradelines" "notations" .Site.Data.ccir.notations_ps) }}
+            {{ partial "ccir/foot-note" (dict "note" "Dispute reported in one or two tradelines" "notations" .Site.Data.ccir.notations_ps "spacing" "20px") }}
         </td>
     </tr>
 </table>
