--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -178,8 +178,8 @@ body {
 
   .table-title {
     font-weight: 700;
-    font-size: 24px;
-    line-height: 24px;
+    font-size: 28px;
+    line-height: 28px;
     letter-spacing: 0.02em;
     color: #2c2c2c;
     margin: 0px auto 10px;
@@ -2200,6 +2200,9 @@ $grey5 : #707070;
   &-bold {
     @include fontStyle(16px, 24px, 700);
   }
+  &-regular {
+    @include fontStyle(16px, 16px, 600);
+  }
 }
 
 .font-18 {
@@ -2913,6 +2916,8 @@ $grey5 : #707070;
         line-height: 24px;
         color: #00A6CA;
         padding: 20px 20px 15px;
+        text-transform: uppercase;
+        vertical-align: top;
       }
 
       td {
