--- a/themes/ink/layouts/screens/page1.html
+++ b/themes/ink/layouts/screens/page1.html
@@ -6,11 +6,7 @@
 
             {{ partial "ccir/report-title" (dict "report_title" "COMPREHENSIVE CREDIT INFORMATION REPORT") }}
 
-            <table>
-                <tr>
-                    <td class="font-36-bold">MOHANA PARAB</td>
-                </tr>
-            </table>
+            {{partial "ccir/report-heading" (dict "heading" "MOHANA PARAB")}}
 
             {{ partial "ccir/horizontal-separator" }}
 
