--- a/themes/ink/layouts/screens/page15.html
+++ b/themes/ink/layouts/screens/page15.html
@@ -1,5 +1,12 @@
 {{ define "main" }}
 
-{{ partial "title-table" (dict "tableHead" .Site.Data.ccir.glossary_data2.table_head "tableBody" .Site.Data.ccir.glossary_data2.table_body "className" "text-break-format glossary-table nostripes"  "break" true "glossaryDataTable" true ) }}
+<table class="no-break">
+    <tr>
+        <td>
+            {{partial "ccir/report-heading" (dict "heading" "GLOSSARY")}}
+            {{ partial "title-table" (dict "tableHead" .Site.Data.ccir.glossary_data2.table_head "tableBody" .Site.Data.ccir.glossary_data2.table_body "className" "text-break-format glossary-table nostripes"  "break" true "glossaryDataTable" true ) }}
+        </td>
+    </tr>
+</table>
 
 {{ end }}
