--- a/themes/ink/layouts/partials/ccir/report-account-table.html
+++ b/themes/ink/layouts/partials/ccir/report-account-table.html
@@ -113,7 +113,7 @@
                                         <td colspan="2">
                                             <table  class="horizontal-border-table">
                                                 <tbody>
-                                                    <tr class="title-blue">
+                                                    <tr class="title-blue font-14-bold">
                                                         <td>YEAR</td>
                                                         <td>JAN</td>
                                                         <td>FEB</td>
