--- a/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
+++ b/themes/ink/layouts/partials/ccir/tradeline-summary-table.html
@@ -43,10 +43,10 @@
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">WORST</span></th>
     </tr>
     <tr class="combined-row">
-      <th class="valign-bottom"><span class="grey5 fw-regular">(₹)</span></th>
-      <th class="valign-bottom"><span class="grey5 fw-regular">(₹)</span></th>
-      <th class="valign-bottom"><span class="grey5 fw-regular">(₹)</span></th>
-      <th class="valign-bottom br-none"><span class="grey5 fw-regular">(₹)</span></th>
+      <th class="valign-bottom"><span class="grey5 font-14-regular">(₹)</span></th>
+      <th class="valign-bottom"><span class="grey5 font-14-regular">(₹)</span></th>
+      <th class="valign-bottom"><span class="grey5 font-14-regular">(₹)</span></th>
+      <th class="valign-bottom br-none"><span class="grey5 font-14-regular">(₹)</span></th>
     </tr>
   </head>
   <tbody>
