--- a/themes/ink/layouts/partials/ccir/product-summary-table.html
+++ b/themes/ink/layouts/partials/ccir/product-summary-table.html
@@ -36,7 +36,7 @@
       <th colspan="2" style="vertical-align: bottom;">ACTIVE HCA/CL</th>
       <th style="vertical-align: bottom;">BALANCE</th>
       <th colspan="2" style="vertical-align: bottom;">OVERDUE</th>
-      <th rowspan="2" style="vertical-align: bottom;">EXCESS<br />PAYMENT<br /><span style="display: block;margin-top: 14px;" class="grey5 fw-regular">(₹)</span></th>
+      <th rowspan="2" style="vertical-align: bottom;">EXCESS<br />PAYMENT<br /><span style="display: block;margin-top: 14px;" class="grey5 font-14-regular">(₹)</span></th>
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">MAX OF<br />RECENT DPD</span></th>
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">1+ DPD</span><span class="dpd-tag yellow"></span></th>
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">30+ DPD</span><span class="dpd-tag orange"></span></th>
@@ -46,13 +46,13 @@
       <th rowspan="2" class="vertical-heading-parent"><span class="vertical-heading">WORST<br />RATING</span></th>
     </tr>
     <tr>
-      <th><span class="grey5 fw-regular">(#)</span></th>
-      <th><span class="grey5 fw-regular">(₹)</span></th>
-      <th><span class="grey5 fw-regular">(#)</span></th>
-      <th><span class="grey5 fw-regular">(₹)</span></th>
-      <th><span class="grey5 fw-regular">(₹)</span></th>
-      <th><span class="grey5 fw-regular">(#)</span></th>
-      <th><span class="grey5 fw-regular">(₹)</span></th>
+      <th><span class="grey5 font-14-regular">(#)</span></th>
+      <th><span class="grey5 font-14-regular">(₹)</span></th>
+      <th><span class="grey5 font-14-regular">(#)</span></th>
+      <th><span class="grey5 font-14-regular">(₹)</span></th>
+      <th><span class="grey5 font-14-regular">(₹)</span></th>
+      <th><span class="grey5 font-14-regular">(#)</span></th>
+      <th><span class="grey5 font-14-regular">(₹)</span></th>
     </tr>
   </thead>
   <tbody>
